# RDMFT_HEG_Correlation

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: BBC3.tsv  Beta_0.45.tsv  Beta_0.55.tsv  Beta_0.65.tsv  CGA.tsv  CHA.tsv  CHF.tsv  GEO.tsv  GU.tsv  HF.tsv  HybOpt_0.938328_0.541076.tsv  Mueller.tsv  OptGM_-0.0821547206643049_0.8013311419635793_0.5925545538598386.tsv  OptGM_-0.1_0.8_0.6.tsv  OptGM_0.940125_0.542422.tsv  OptGeo_-0.0821547206643049_0.8013311419635793_0.5925545538598386.tsv  Power_0.55.tsv  Power_0.58.tsv  log  results.tsv
docs/: program_summary_zh.md
include/: Energy.hpp  ExchangeKernel.hpp  Functional.hpp  Grid.hpp  HEG.hpp  MomentumDistributionGZ.hpp  NNFunctional.hpp  QMC.hpp  Solver.hpp
scripts/: nn_gz_common.py  optimize_hybopt.py  optimize_nn_gz.py  optimize_optGM.py  optimize_optGeo.py  plot_common.py  plot_gz.py  plot_nk.py  plot_nk_hybopt.py  plot_nk_nn.py  plot_nk_optgeo.py  plot_nk_optgm.py  plot_results.py  prepare_nn_gz_data.py  requirements-hybopt.txt  requirements-optgm.txt
src/: MomentumDistributionGZ.cpp  NNFunctional.cpp  main.cpp
tests/: test_gz_momentum.cpp  test_hf_exchange.cpp  test_nn_functional.cpp
tests/fixtures/: gen_nn_pair.py  gen_nn_power055.py  nn_pair.json  nn_power055.json
tools/: dump_gz_grid.cpp
tools/reference/: README.md  nk_GZ.f
